--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <section class="page-header">
     <h1 class="project-name">木森造型</h1>
 
-    <h2 class="project-tagline">一个发现美和塑造美的国度</h2>
+    <h2 class="project-tagline">The land to find and be a better one. 一个发现美和塑造美的国度.</h2>
 
-    <a href="index.html" class="btn">每日优惠</a>
-    <a href="show.html" class="btn">魅力展厅</a>
-    <a href="about.html" class="btn">关于我们</a>
+    <a href="index.html" class="btn"> 每日优惠 </a>
+    <a href="show.html" class="btn"> 魅力展厅 </a>
+    <a href="about.html" class="btn"> 关于我们 </a>
 </section>
 
 <section class="main-content">
