--- a/index.html
+++ b/index.html
@@ -15,19 +15,56 @@
 
     <h2 class="project-tagline">The land to find and be a better one. 一个发现美和塑造美的国度.</h2>
 
-    <a href="index.html" class="btn"> 每日优惠 </a>
-    <a href="show.html" class="btn"> 魅力展厅 </a>
-    <a href="about.html" class="btn"> 关于我们 </a>
+    <a href="index.html" class="btn">每日优惠</a>
+    <a href="show.html" class="btn">魅力展厅</a>
+    <a href="about.html" class="btn">关于我们</a>
 </section>
 
 <section class="main-content">
     <h3>
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span
-                class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+                class="octicon octicon-link"></span></a>积分会员制.</h3>
 
-    <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your
-        page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After
-        your page is generated, you can check out the new branch:</p>
+    <p>成为木森造型会社的会员，您将体验到宾至如归的至上造型体验，同时兼享绝无仅有的优惠政策打来的红利。下面是我们的入会条例，我们将力保每位会员合理使用其应有权利。</p>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Artist</th>
+                <th>Album</th>
+                <th>Year</th>
+                <th>Label</th>
+                <th>Awards</th>
+                <th>Songs</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Michael Jackson</td>
+                <td>Thriller</td>
+                <td>1982</td>
+                <td>Epic Records</td>
+                <td>Grammy Award for Album of the Year, American Music Award for Favorite Pop/Rock Album, American Music Award for Favorite Soul/R&amp;B Album, Brit Award for Best Selling Album, Grammy Award for Best Engineered Album, Non-Classical</td>
+                <td>Wanna Be Startin' Somethin', Baby Be Mine, The Girl Is Mine, Thriller, Beat It, Billie Jean, Human Nature, P.Y.T. (Pretty Young Thing), The Lady in My Life</td>
+            </tr>
+            <tr>
+                <td>Prince</td>
+                <td>Purple Rain</td>
+                <td>1984</td>
+                <td>Warner Brothers Records</td>
+                <td>Grammy Award for Best Score Soundtrack for Visual Media, American Music Award for Favorite Pop/Rock Album, American Music Award for Favorite Soul/R&amp;B Album, Brit Award for Best Soundtrack/Cast Recording, Grammy Award for Best Rock Performance by a Duo or Group with Vocal</td>
+                <td>Let's Go Crazy, Take Me With U, The Beautiful Ones, Computer Blue, Darling Nikki, When Doves Cry, I Would Die 4 U, Baby I'm a Star, Purple Rain</td>
+            </tr>
+            <tr>
+                <td>Beastie Boys</td>
+                <td>License to Ill</td>
+                <td>1986</td>
+                <td>Mercury Records</td>
+                <td>noawardsbutthistablecelliswide</td>
+                <td>Rhymin &amp; Stealin, The New Style, She's Crafty, Posse in Effect, Slow Ride, Girls, (You Gotta) Fight for Your Right, No Sleep Till Brooklyn, Paul Revere, Hold It Now, Hit It, Brass Monkey, Slow and Low, Time to Get Ill</td>
+            </tr>
+        </tbody>
+    </table>
 
 <pre><code>$ cd your_repo_root/repo_name
     $ git fetch origin
