--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <table>
         <thead>
             <tr>
-                <th>Artist</th>
-                <th>Album</th>
-                <th>Year</th>
-                <th>Label</th>
-                <th>Awards</th>
-                <th>Songs</th>
+                <th>会费金额(元)</th>
+                <th>实际可用(元)</th>
+                <th>消费时间</th>
+                <th>会员等级</th>
+                <th>会员权利</th>
+                <th>附加说明</th>
             </tr>
         </thead>
         <tbody>
