--- a/index.html
+++ b/index.html
@@ -40,36 +40,31 @@
         </thead>
         <tbody>
             <tr>
-                <td>Michael Jackson</td>
-                <td>Thriller</td>
-                <td>1982</td>
-                <td>Epic Records</td>
-                <td>Grammy Award for Album of the Year, American Music Award for Favorite Pop/Rock Album, American Music Award for Favorite Soul/R&amp;B Album, Brit Award for Best Selling Album, Grammy Award for Best Engineered Album, Non-Classical</td>
-                <td>Wanna Be Startin' Somethin', Baby Be Mine, The Girl Is Mine, Thriller, Beat It, Billie Jean, Human Nature, P.Y.T. (Pretty Young Thing), The Lady in My Life</td>
+                <td>50</td>
+                <td>60</td>
+                <td>半年内消费</td>
+                <td>正式会员</td>
+                <td>正式级会员专属QQ群。电话预约。会员生日专属优惠。</td>
+                <td>消费1元积2分，积分可兑换会员礼品。</td>
             </tr>
             <tr>
-                <td>Prince</td>
-                <td>Purple Rain</td>
-                <td>1984</td>
-                <td>Warner Brothers Records</td>
-                <td>Grammy Award for Best Score Soundtrack for Visual Media, American Music Award for Favorite Pop/Rock Album, American Music Award for Favorite Soul/R&amp;B Album, Brit Award for Best Soundtrack/Cast Recording, Grammy Award for Best Rock Performance by a Duo or Group with Vocal</td>
-                <td>Let's Go Crazy, Take Me With U, The Beautiful Ones, Computer Blue, Darling Nikki, When Doves Cry, I Would Die 4 U, Baby I'm a Star, Purple Rain</td>
+                <td>100</td>
+                <td>120</td>
+                <td>一年内消费</td>
+                <td>白金级会员</td>
+                <td>白金级会员专属QQ群。电话预约，短信预约，QQ预约。会员生日专属优惠。</td>
+                <td>消费1元积2分，积分可兑换会员礼品。会员生日可获得庆生礼品。</td>
             </tr>
             <tr>
-                <td>Beastie Boys</td>
-                <td>License to Ill</td>
-                <td>1986</td>
-                <td>Mercury Records</td>
-                <td>noawardsbutthistablecelliswide</td>
-                <td>Rhymin &amp; Stealin, The New Style, She's Crafty, Posse in Effect, Slow Ride, Girls, (You Gotta) Fight for Your Right, No Sleep Till Brooklyn, Paul Revere, Hold It Now, Hit It, Brass Monkey, Slow and Low, Time to Get Ill</td>
+                <td>500</td>
+                <td>600</td>
+                <td>三年内消费</td>
+                <td>钻石级会员</td>
+                <td>钻石级会员专属QQ群。电话预约，短信预约，QQ预约。会员生日专属优惠。国家法定节假日专属优惠。</td>
+                <td>消费1元积2分，积分可兑换会员礼品。会员生日可获得庆生礼品。</td>
             </tr>
         </tbody>
     </table>
-
-<pre><code>$ cd your_repo_root/repo_name
-    $ git fetch origin
-    $ git checkout gh-pages
-</code></pre>
 
     <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
