--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <table>
         <thead>
             <tr>
-                <th>会费金额(元)</th>
-                <th>实际可用(元)</th>
+                <th>会费金额</th>
+                <th>实际可用</th>
                 <th>消费时间</th>
                 <th>会员等级</th>
                 <th>会员权利</th>
@@ -42,24 +42,24 @@
             <tr>
                 <td>50</td>
                 <td>60</td>
-                <td>半年内消费</td>
-                <td>正式会员</td>
+                <td>半年内有效</td>
+                <td>正式级</td>
                 <td>正式级会员专属QQ群。电话预约。会员生日专属优惠。</td>
                 <td>消费1元积2分，积分可兑换会员礼品。</td>
             </tr>
             <tr>
                 <td>100</td>
                 <td>120</td>
-                <td>一年内消费</td>
-                <td>白金级会员</td>
+                <td>一年内有效</td>
+                <td>白金级</td>
                 <td>白金级会员专属QQ群。电话预约，短信预约，QQ预约。会员生日专属优惠。</td>
                 <td>消费1元积2分，积分可兑换会员礼品。会员生日可获得庆生礼品。</td>
             </tr>
             <tr>
                 <td>500</td>
                 <td>600</td>
-                <td>三年内消费</td>
-                <td>钻石级会员</td>
+                <td>三年内有效</td>
+                <td>钻石级</td>
                 <td>钻石级会员专属QQ群。电话预约，短信预约，QQ预约。会员生日专属优惠。国家法定节假日专属优惠。</td>
                 <td>消费1元积2分，积分可兑换会员礼品。会员生日可获得庆生礼品。</td>
             </tr>
