--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <footer class="site-footer">
 
-        <span class="site-footer-credits">This page was built by <a href="http://about.me/Channely">Channely(程林)</a> using the <a
+        <span class="site-footer-credits">This page was built by <a href="qijie29896@gmail.com">Channely（程林）</a> using the <a
                 href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a
                 href="https://twitter.com/jasonlong">Jason Long</a>.</span>
     </footer>
