--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 
     <footer class="site-footer">
 
-        <span class="site-footer-credits">This page was built by <a href="qijie29896@gmail.com">Channely（程林）</a> using the <a
-                href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a
-                href="https://twitter.com/jasonlong">Jason Long</a>.</span>
+        <span class="site-footer-credits">©2015 木森造型 MuSenZaoXing. This site was built by Channely, mail: qijie29896@gmail.com</span>
     </footer>
 
 </section>
