--- a/show.html
+++ b/show.html
@@ -24,8 +24,7 @@
     
     <p><img src="https://placekitten.com/g/1200/800/" alt=""></p>
     
-    <pre><code>作品展示-1：岁月留芳
-    </code></pre>
+    <pre><code>作品展示-1：岁月留芳</code></pre>
 
     <footer class="site-footer">
 
