--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <footer class="site-footer">
 
-        <span class="site-footer-credits">©2015 木森造型 MuSenZaoXing. This site was built by Channely, mail: qijie29896@gmail.com</span>
+        <span class="site-footer-credits">©2015 木森造型 MuSenZaoXing. This site was built by Channely, Mail: qijie29896@gmail.com</span>
     </footer>
 
 </section>
